# pi-ink-image-server

./: .env.example  .gitignore  CLAUDE.md  README.md  nginx-pi2w.conf  pi2w-server.service  pyproject.toml  run.sh  server.py
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  security.yml
homeassistant/: configuration.yaml  lovelace-card.yaml
pi2w/: __init__.py  __main__.py  app.py  config.py  models.py
pi2w/adapters/: __init__.py  openai_adapter.py
pi2w/data/: __init__.py  artists.py
pi2w/generators/: __init__.py  prompt.py  quote.py
pi2w/imaging/: __init__.py  analyzer.py  quantizer.py  text.py
pi2w/services/: __init__.py  art_service.py
pi_client/: .env.example  display_client.py  install.sh  requirements.txt  webhook_listener.py
